Fixed errors and upgraded some versions.